added extrinsic loader

--- a/left.yml
+++ b/left.yml
@@ -1,12 +1,11 @@
 %YAML:1.0
 cameraMatrix: !!opencv-matrix
-   rows: 3
-   cols: 3
-   dt: d
-   data:[ 533.86762402, 0., 337.24939056, 0.,
-          532.51732661, 247.919239, 0., 0., 1.]
+  rows: 3
+  cols: 3
+  dt: d
+  data: [ 533.86762402, 0., 337.24939056, 0., 532.51732661, 247.919239, 0., 0., 1.]
 distCoeff: !!opencv-matrix
-   rows: 1
-   cols: 5
-   dt: d
-   data: [-0.26372061,  0.18851249, -0.00090394, -0.00175425, -0.10241053]
+  rows: 1
+  cols: 5
+  dt: d
+  data: [-0.26372061,  0.18851249, -0.00090394, -0.00175425, -0.10241053]
