stereoRectify fn is out loop

--- a/parameters/right.yml
+++ b/parameters/right.yml
@@ -1,11 +1,14 @@
 %YAML:1.0
 cameraMatrix: !!opencv-matrix
-  rows: 3
-  cols: 3
-  dt: d
-  data: [ 531.73827491, 0., 342.699634, 0., 530.93385198, 262.36498628, 0., 0., 1.]
+   rows: 3
+   cols: 3
+   dt: d
+   data: [ 9.6014439075391476e+02, 0., 3.2946799178219334e+02, 0.,
+       9.5956328375633177e+02, 2.6837875908615746e+02, 0., 0., 1. ]
 distCoeff: !!opencv-matrix
-  rows: 1
-  cols: 5
-  dt: d
-  data: [-0.25232498, 0.16192896, -0.00085018,  0.00114874, -0.08283877]
+   rows: 1
+   cols: 5
+   dt: d
+   data: [ -3.3880587439602497e-02, -9.2097331871265856e-02,
+       3.1788093470316932e-03, -1.5554548433097629e-03,
+       4.4378078283396558e+00 ]
