--- a/parameters/left.yml
+++ b/parameters/left.yml
@@ -1,11 +1,14 @@
 %YAML:1.0
 cameraMatrix: !!opencv-matrix
-  rows: 3
-  cols: 3
-  dt: d
-  data: [ 533.86762402, 0., 337.24939056, 0., 532.51732661, 247.919239, 0., 0., 1.]
+   rows: 3
+   cols: 3
+   dt: d
+   data: [ 9.6151439291002305e+02, 0., 3.3626374247753193e+02, 0.,
+       9.6196619056238080e+02, 2.7010896272683436e+02, 0., 0., 1. ]
 distCoeff: !!opencv-matrix
-  rows: 1
-  cols: 5
-  dt: d
-  data: [-0.26372061,  0.18851249, -0.00090394, -0.00175425, -0.10241053]
+   rows: 1
+   cols: 5
+   dt: d
+   data: [ -6.5520759536789722e-02, 5.8812259299869440e-01,
+       3.6981304826014978e-03, -3.9012410008698894e-03,
+       -1.1417197791737084e+00 ]
